adding last name to the role fill modal and output csv

--- a/assets/index.html
+++ b/assets/index.html
@@ -21,6 +21,10 @@
           Resident
         </label>
       </div>
+      <div class="modal-input-group">
+        <label for="lastNameInput">Last Name:</label>
+        <input type="text" id="lastNameInput" placeholder="Enter last name" required />
+      </div>
       <button id="nextBtn" class="next-button">Next</button>
     </div>
   </div>
