--- a/assets/index.html
+++ b/assets/index.html
@@ -18,12 +18,21 @@
         </label>
         <label>
           <input type="radio" name="role" value="resident" id="roleResident" />
-          Resident
+          Resident or Fellow
         </label>
       </div>
-      <div class="modal-input-group">
-        <label for="lastNameInput">Last Name:</label>
-        <input type="text" id="lastNameInput" placeholder="Enter last name" required />
+      <div class="modal-input-group" id="pgyGroup" style="display: none;">
+        <label for="pgySelect">I am PGY...</label>
+        <select id="pgySelect" required>
+          <option value="">Select PGY</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+        </select>
       </div>
       <button id="nextBtn" class="next-button">Next</button>
     </div>
