--- a/assets/index.html
+++ b/assets/index.html
@@ -55,6 +55,7 @@
       <!-- <source src="./video.mp4" type="video/mp4" /> -->
       Your browser does not support HTML5 video.
     </video>
+    <div id="subtitleBox" class="subtitle-box"></div>
 
     <div class="controls">
       <button id="markBtn" class="mark">MARK (double-click or press M)</button>
